--- a/config/index.html
+++ b/config/index.html
@@ -9,6 +9,7 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width,initial-scale=1">
       <meta http-equiv="x-ua-compatible" content="ie=edge">
+      <meta http-equiv="refresh" content="0; URL='https://docs.errata.ai/vale/config'" />
       
         <meta name="description" content="A customizable, syntax-aware linter for prose.">
       
